--- a/back/package.json
+++ b/back/package.json
@@ -11,5 +11,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6"
-  }
+  },
+  
+  "engines": {
+  "node": "18.x"
 }
+
+}
+
